refactor: Adopt Java 17 language features
Use this link to re-run the recipe: https://app.moderne.io/builder/vxk6TUk8P?organizationId=NDAwOWYzMTAtY2NmMS00Mzk2LWJlZjctYzg2OWY0Zjk1ZDhi

Co-authored-by: Moderne <team@moderne.io>
Signed-off-by: Tim te Beek <timtebeek@gmail.com>